<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/min_bounding_box_view"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@android:color/black"
    android:orientation="vertical" > 
 
    <FrameLayout
        android:id="@+id/min_bounding_box_surface_view"
        android:layout_width="wrap_content"
        android:layout_height="0dip"
        android:layout_weight="1"
         />
    
    <LinearLayout
        android:id="@+id/min_bounding_box_buttons"
        style="@style/ButtonBarPortrait"
         >
         
        <ImageButton
            android:id="@+id/edit_form_button"
            style="@style/ButtonBarButton"
            android:src="@drawable/mbr_icon"
            android:contentDescription="@string/edit_form"
            android:onClick="editForm"
           />
         
	    <ImageButton
            android:id="@+id/edit_color_button"
            style="@style/ButtonBarButton"
            android:src="@drawable/color_palette"
            android:contentDescription="@string/edit_color"
            android:onClick="editColor"
           />
        
        <ImageButton
            android:id="@+id/edit_line_button"
            style="@style/ButtonBarButton"
            android:src="@drawable/lines_icon_white"
            android:contentDescription="@string/edit_line"
            android:onClick="editLine"
              />
        <!-- 
        <ImageButton
            android:id="@+id/delete_scribble_button"
            style="@style/ButtonBarButton"
            android:src="@drawable/clear"
            android:contentDescription="@string/delete_scribble" 
            android:onClick="resetLastDrawing"
             />
         -->
        <ImageButton
            android:id="@+id/add_further_scribble_button"
            style="@style/ButtonBarButton"
            android:src="@drawable/plus"
            android:contentDescription="@string/add_further_scribble" 
            android:onClick="addFurtherScribble"
             />

        <ImageButton
            android:id="@+id/zoom_button"
            style="@style/ButtonBarButton"
            android:src="@drawable/magnifier"
            android:contentDescription="@string/magnifier" 
            android:onClick="zoom"
             />
     
         <ImageButton
            android:id="@+id/menu_button"
            style="@style/ButtonBarButton"
            android:src="@drawable/menu_icon"
            android:contentDescription="@string/menu" 
            android:onClick="openMenu"
             />

    </LinearLayout>

</LinearLayout>