<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/foreground_background_view"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@android:color/black"
    android:orientation="horizontal" >
    
    <FrameLayout
        android:id="@+id/foreground_background_surface_view"
        android:layout_width="0dip"
        android:layout_height="wrap_content"
        android:layout_weight="1"
         />
    
	<LinearLayout
        android:id="@+id/foreground_background_view_buttons"
        style="@style/ButtonBarLandscape"
         >
         
         <ImageButton
            android:id="@+id/menu_button"
            style="@style/ButtonBarButton"
            android:src="@drawable/menu_icon"
            android:contentDescription="@string/menu" 
            android:onClick="openMenu"
             />
        
         <ImageButton
            android:id="@+id/edit_line_button"
            style="@style/ButtonBarButton"
            android:src="@drawable/lines_icon_white"
            android:contentDescription="@string/edit_line"
            android:onClick="editLine"
              />
        
         <ImageButton
            android:id="@+id/edit_color_button"
            style="@style/ButtonBarButton"
            android:src="@drawable/color_palette"
            android:contentDescription="@string/edit_color"
            android:onClick="editColor"
           />
        
        <ImageButton
            android:id="@+id/select_fore_or_background_button"
            style="@style/ButtonBarButton"
            android:src="@drawable/f_icon"
            android:contentDescription="@string/edit_foreground_background"
            android:onClick="pickForegroundBackground"
           />

    </LinearLayout>

</LinearLayout>