<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/foreground_background_view"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@android:color/black"
    android:orientation="vertical" >
    
    
    <!-- 
    <ScrollView
        android:id="@+id/picture_scroll_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
         >
          -->
    
	     <FrameLayout
	        android:id="@+id/foreground_background_surface_view"
	        android:layout_width="wrap_content"
        	android:layout_height="0dip"
        	android:layout_weight="1"
	         />
	    
	    <!-- android:layout_height="0dip"
	    	 android:layout_weight="1"
	   	 -->
	  
 <!-- 
    
    </ScrollView>
    -->
    
	<LinearLayout
        android:id="@+id/foreground_background_view_buttons"
        style="@style/ButtonBarPortrait"
         >
         
	    <ImageButton
            android:id="@+id/select_fore_or_background_button"
            style="@style/ButtonBarButton"
            android:src="@drawable/f_icon"
            android:contentDescription="@string/edit_foreground_background"
            android:onClick="pickForegroundBackground"
           />

        <ImageButton
            android:id="@+id/edit_color_button"
            style="@style/ButtonBarButton"
            android:src="@drawable/color_palette"
            android:contentDescription="@string/edit_color"
            android:onClick="editColor"
           />

        <ImageButton
            android:id="@+id/edit_line_button"
            style="@style/ButtonBarButton"
            android:src="@drawable/lines_icon_white"
            android:contentDescription="@string/edit_line"
            android:onClick="editLine"
              />

         <ImageButton
            android:id="@+id/menu_button"
            style="@style/ButtonBarButton"
            android:src="@drawable/menu_icon"
            android:contentDescription="@string/menu" 
            android:onClick="openMenu"
             />

    </LinearLayout>

</LinearLayout>