<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/buttonGray" >
    
     <TextView 
        style="@style/TextViewDialog"
        android:text="@string/dialog_transmission_to_server" />  
        
    <View
        android:layout_width="fill_parent"
    	android:layout_height="1dip"
		android:background="@color/middleGray"
		android:layout_marginBottom="15dp" />
    
    <ProgressBar 
        android:id="@+id/progressbar"
        android:progressDrawable="@drawable/custom_progress_bar" 
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:layout_marginTop="15dp"
    	android:layout_marginLeft="15dp"
    	android:layout_marginRight="15dp"
    	android:layout_marginBottom="5dp"
    	android:progress="0"
    	android:max="100"
        />
    
   <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:visibility="visible"
            android:weightSum="4" >
 
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:layout_marginLeft="15dp"
                android:gravity="left"
                android:text="@string/zero_percent"
                android:textColor="@android:color/white"
                android:textStyle="bold" />
 
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:layout_marginRight="15dp"
                android:gravity="right"
                android:text="@string/hundred_percent"
                android:textColor="@android:color/white"
                android:textStyle="bold" />
        </LinearLayout>
    
     <TextView 
        android:id="@+id/server_response_text"
        style="@style/TextViewDialog"
        android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
        /> 
        
     <ImageButton 
        android:id="@+id/button_transmission_ok"
        style="@style/ButtonDialog"
        android:contentDescription="@string/ok"
        android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:src="@drawable/check"
        />  

</LinearLayout>
