<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@color/buttonGray"
    android:orientation="vertical" >
    
    <TextView 
        style="@style/TextViewDialog"
        android:text="@string/dialog_text_annotation"
        />  
        
    <View 
        android:layout_width="fill_parent"
    	android:layout_height="1dip"
		android:background="@color/middleGray"
		android:layout_marginBottom="15dp" />
    
     <LinearLayout
        android:id="@+id/text_annotation_dialog"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <ListView
            android:id="@+id/text_annotation_list"
            style="@style/ListViewEditTextItems" />
        
    </LinearLayout>
    
     <LinearLayout
        android:id="@+id/text_annotation_dialog_button_bar"
        style="@style/ButtonBarPortrait"
         >
        
         <ImageButton
            android:id="@+id/new_text_annotation_button"
            style="@style/ButtonDialog"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/new_text_annotation"
            android:src="@drawable/plus2"
            android:layout_weight="1" />
    
     	<ImageButton
            android:id="@+id/text_annotation_ok_button"
            style="@style/ButtonDialog"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/pick"
            android:src="@drawable/check"
            android:layout_weight="1"  />
     
     </LinearLayout>
     
</LinearLayout>
